  cursor without needing a selection, and setting the default style now
  avoids duplicating character attributes in subsequently typed text when
  they exist in the paragraph style.
- wxRTC: fixed IsPositionVisible to scroll a position into view correctly.
- wxRTC: fixed a problem with paste resetting the content paragraph style.
- Fixed error in generic tree control CalculatePositions.
- Added wxFD_FILE_MUST_EXIST to wxFileSelector function.
- Added wxDataViewCtrl Get/SetValueByRow functions for forward compatibility
  with 2.9.
- Right-clicking is now supported in any kind of wxAuiToolBar button.
- Fixed a bug in wxAcceleratorEntry::IsOk.
- wxGraphicsContext::DrawBitmap: x and y coordinates no longer affected by
  stretch factor.
- Fixed an assert in wxGrid on wxEVT_MOUSE_CAPTURE_LOST.
- Fixed bug in generic wxTreeCtrl where SelectItem toggles the selection if
  the item is already in the desired state.
- Fixed bug in wxSizer::Replace(size_t, wxSizerItem *) whereby SetContainingSizer
  is not called.
- Fixed compilation with libpng 1.5 and above.

wxMSW:

- wxOwnerDrawnComboBox and wxComboCtrl with wxCB_READONLY window style now
  have more native-like focus indicator rendering.
- Fixed wxOwnerDrawnComboBox keyboard handling: drop-down is no longer
  displayed when arrow key is pressed (without Alt).
- In some rare cases wxOwnerDrawnComboBox drop-down animation could display
  as garbage. This has now been greatly reduced (mcben).
- Fixed OLE date conversion bug.
- Added check for double window handle creation.
- Fixed WIN64 crash in wxStyledTextCtrl.
- Fixed Watcom compilation when omitting threads.
- Fixed wxFileName::IsFileReadable on Windows 98.
- Fixed bug whereby clicking anywhere inside wxListBox generates
  wxEVT_COMMAND_LISTBOX_SELECTED event. You need to set wxUSE_LISTBOX_SELECTION_FIX
  to 1 in include/wx/msw/listbox.h to enable this binary-incompatible fix.

wxGTK:

- Fix for --disable-radiobtn compilation.